[package]
name = "wait-for"
version = "0.1.0"
edition = "2021"
authors = ["poi2"]
description = "A simple CLI to wait for a service to be available before executing a command"
license = "MIT OR Apache-2.0"
repository = "https://github.com/poi2/wait-for"

[[bin]]
name = "wait-for"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
url = "2.0"
termcolor = "1.4"
is-terminal = "0.4"
